# blender-custom-slicer

./: .gitignore  MEMORY.md  PLAN.md  README.md  pyproject.toml
.cursor/skills/blender-addon-hard-reload/: SKILL.md
blender_addon/: __init__.py  brim.py  export.py  ir.py  operators.py  preview.py  slice.py  template_parse.py  version.py
blender_addon/assets/: 2_color_change_cube.3mf  2_color_change_cube.gcode  Test.gcode  minimal_bambu_template_placeholder.gcode
blender_addon/export/: __init__.py  compose.py  gcode_edit.py  motion.py  purge_resolve.py  types.py
blender_addon/template_parse/: __init__.py  markers.py  parse.py  purge_towers.py  toolchange.py  types.py
docs/gcode-reference/: community-gcode-docs.md
scripts/: blender_addon_hard_reload_socket.py
tests/: test_addon_bl_info.py  test_brim.py  test_export_transitions.py  test_export_with_real_template.py  test_gcode_edit.py  test_package_imports.py  test_purge_resolve.py  test_template_footer_trim.py  test_template_parse.py
